--- a/.gitignore
+++ b/.gitignore
@@ -191,7 +191,7 @@ tags
 # build files (development)
 /.tmp
 # build files (production)
-/build
+# /build
 # build files (difference files)
 /build_diff
 # spreadsheet key
